@@ -2,7 +2,7 @@
 #  $Id$
 #
 
-PREFIX=/home/jennifer/rtems-head-work/bsp-install/
+PREFIX=/home/joel/rtems-4.11-work/bsp-install/
 OBJS = config.o printheir_executing.o schedsim.o wrap_thread_dispatch.o
 CPPFLAGS = -I${PREFIX}/include/schedsim
 LDFLAGS = -L${PREFIX}/lib
