@@ -1,3 +1,7 @@
+/*
+ *  $Id$
+ */
+
 #include <rtems.h>
 
 #define CONFIGURE_INIT
